<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteSignupActivity">

    <View
        android:id="@+id/viewMain"
        android:layout_width="361dp"
        android:layout_height="503dp"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/imageViewProfilePicture"
        android:layout_width="143dp"
        android:layout_height="136dp"
        android:layout_alignTop="@+id/viewMain"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="134dp"
        android:src="@drawable/playbill" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/usernameInstruction"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_profile"
        android:background="@drawable/unfilled_bordered_button"
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text" />


    <Button
        android:id="@+id/buttonComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_alignEnd="@+id/editTextUsername"
        android:layout_marginStart="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/gold"
        android:text="@string/complete"
        android:onClick="submitSignup"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonComplete"
        android:layout_alignEnd="@+id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="57dp"
        android:backgroundTint="@color/gold"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/usernameInstruction"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewProfilePicture"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="0dp"
        android:textSize="24dp"
        android:gravity="center"
        android:text="@string/provide_username" />

</RelativeLayout>